<resources>
    <string name="app_name">Market Inventory</string>

    <!-- MainActivity -->
    <string name="hint_title_in_button_add">Додати</string>
    <string name="hint_title_in_button_create">Створити</string>
    <string name="hint_title_in_button_list">Переглянути</string>
    <string name="title_button_add_properties">Опис продукту</string>
    <string name="title_button_add_product">Новий продукт</string>
    <string name="title_button_product_list">Список продуктів</string>
    <string name="title_button_new_inventory">Звіт</string>

    <string name="title_product_count">Кількість продуктів</string>
    <string name="title_last_report">Останній звіт</string>

    <!-- NewProductFragment -->
    <string name="title_add_new_product">Новий продукт</string>
    <string name="hint_bar_code"><font size="16">Bar Code</font></string>
    <string name="hint_product_name"><font size="16">Назва продукту</font></string>
    <string name="hint_product_description"><font size="16">Опис продукту</font></string>
    <string name="title_group_name">Група</string>
    <string name="title_quantity_name">Вимір</string>
    <string name="title_button_add">Додати</string>

    <string name="toast_is_empty_product_barcode">Введіть BarCode</string>
    <string name="toast_is_empty_product_name">Введіть назву продукту</string>


    <string name="dialog_product_delete">Бажаєте видалити продукт?</string>
    <string name="dialog_product_delete_yes">Так</string>
    <string name="dialog_product_delete_no">Ні</string>

    <!-- EditProductPropertiesActivity -->
    <string name="dialog_product_group_new">Група</string>
    <string name="dialog_product_properties_new">Додати</string>
    <string name="dialog_product_properties_name">Назва</string>
    <string name="title_activity_counting">CountingActivity</string>

    <!-- CountingListActivity -->
    <string name="dialog_inv_thread_delete">Бажаєте видалити інвентарізацію?</string>


    <!--<string name="hint_product_description"><font size="16">Опис продукту</font></string>-->


</resources>
